--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -6,6 +6,10 @@
     <ion-card-content>
       <form (ngSubmit)="register()">
         <ion-item>
+          <ion-label position="floating">Username</ion-label>
+          <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+        </ion-item>
+        <ion-item>
           <ion-label position="floating">Email</ion-label>
           <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
         </ion-item>
