fixed some small logout

--- a/src/app/default/default.page.html
+++ b/src/app/default/default.page.html
@@ -21,5 +21,5 @@
   <ion-button expand="full" (click)="navigateToDeckEditor()">Go to Deck Editor</ion-button>
   <ion-button expand="full" (click)="navigateToSimilarGame()">Go to the Game</ion-button>
   <ion-button expand="full" (click)="navigateToCardSearch()">Go to Card Search</ion-button>
-  <ion-button expand="full" (click)="navigateToLogin()">Go to Login</ion-button>
+  <ion-button expand="full" (click)="logout()">Logout</ion-button>
 </ion-content>
