adding the game

--- a/src/app/default/default.page.html
+++ b/src/app/default/default.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Welcome to DeckAlchemy</ion-title>
+    <ion-title>Default Page</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,8 +18,8 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button expand="full" (click)="navigateToDeckEditor()">Go to Deck Editor</ion-button>
-  <ion-button expand="full" (click)="navigateToSimilarGame()">Go to the Game</ion-button>
-  <ion-button expand="full" (click)="navigateToCardSearch()">Go to Card Search</ion-button>
+  <ion-button expand="full" (click)="navigateToDeckEditor()">Deck Editor</ion-button>
+  <ion-button expand="full" (click)="navigateToSimilarGame()">Game</ion-button>
+  <ion-button expand="full" (click)="navigateToCardSearch()">Card Search</ion-button>
   <ion-button expand="full" (click)="logout()">Logout</ion-button>
 </ion-content>
