fixed some small errors

--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -4,6 +4,9 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-button expand="full" (click)="navigateToDeckEditor()">Deck Editor</ion-button>
+<ion-button expand="full" (click)="navigateToCardSearch()">Card Search</ion-button>
+
 <ion-content class="ion-padding">
   <ion-card (click)="togglePlayerDeck()">
     <ion-card-header>
