updated the game

--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -64,4 +64,5 @@
   </ion-card>
 
   <ion-button expand="full" (click)="savePlayerDeck()">Save Player Deck</ion-button>
+  <ion-button expand="full" (click)="simulateDuel()">Simulate Duel</ion-button>
 </ion-content>
