trying to fix the game

--- a/src/app/deck-editor/deck-editor.page.html
+++ b/src/app/deck-editor/deck-editor.page.html
@@ -6,52 +6,50 @@
       <ion-button expand="full" color="secondary" (click)="goToCardSearch()">Go to Card Search</ion-button>
     </div>
 
-    <!-- Create Deck Section -->
-    <ion-item>
-      <ion-input [(ngModel)]="newDeckName" placeholder="Enter deck name"></ion-input>
-      <ion-button (click)="createDeck()">Create Deck</ion-button>
+  <!-- Create Deck Section -->
+  <ion-item>
+    <ion-input [(ngModel)]="newDeckName" placeholder="Enter deck name"></ion-input>
+    <ion-button (click)="createDeck()">Create Deck</ion-button>
+  </ion-item>
+
+  <!-- Deck List -->
+  <ion-list>
+    <ion-item *ngFor="let deck of decks" (click)="selectDeckFromList(deck)">
+      <ion-label>{{ deck.name }}</ion-label>
     </ion-item>
+  </ion-list>
 
-    <!-- Deck List -->
-    <ion-list>
-      <ion-item *ngFor="let deck of decks" (click)="selectDeckFromList(deck)">
-        <ion-label>{{ deck.name }}</ion-label>
-      </ion-item>
-    </ion-list>
+  <!-- Selected Deck Display -->
+  <ion-card *ngIf="selectedDeck">
+    <ion-card-header>
+      <ion-card-title>{{ selectedDeck.name }}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item *ngFor="let card of filteredCards">
+          <ion-thumbnail slot="start">
+            <img [src]="card.imageUrl" alt="{{ card.name }}">
+          </ion-thumbnail>
+          <ion-label>{{ card.name }}</ion-label>
+          <ion-button (click)="removeFromDeck(card)">Remove</ion-button>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 
-    <!-- Selected Deck Display -->
-    <ion-card *ngIf="selectedDeck">
-      <ion-card-header>
-        <ion-card-title>{{ selectedDeck.name }}</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-list>
-          <ion-item *ngFor="let card of selectedDeck.cards">
-            <ion-thumbnail slot="start">
-              <img [src]="card.imageUrl" alt="{{ card.name }}">
-            </ion-thumbnail>
-            <ion-label>{{ card.name }}</ion-label>
-            <ion-button (click)="removeFromDeck(card)">Remove</ion-button>
-          </ion-item>
-        </ion-list>
-      </ion-card-content>
-    </ion-card>
+  <!-- Search Cards -->
+  <ion-item>
+    <ion-input [(ngModel)]="searchTerm" placeholder="Search cards"></ion-input>
+    <ion-button (click)="searchCards()">Search</ion-button>
+  </ion-item>
 
-    <!-- Search Cards -->
-    <ion-item>
-      <ion-input [(ngModel)]="searchTerm" placeholder="Search cards"></ion-input>
-      <ion-button (click)="searchCards()">Search</ion-button>
+  <!-- Card Search Results -->
+  <ion-list>
+    <ion-item *ngFor="let card of allCards">
+      <ion-thumbnail slot="start">
+        <img [src]="card.imageUrl" alt="{{ card.name }}">
+      </ion-thumbnail>
+      <ion-label>{{ card.name }}</ion-label>
+      <ion-button (click)="addToDeck(card)">Add</ion-button>
     </ion-item>
-
-    <!-- Card Search Results -->
-    <ion-list>
-      <ion-item *ngFor="let card of allCards">
-        <ion-thumbnail slot="start">
-          <img [src]="card.imageUrl" alt="{{ card.name }}">
-        </ion-thumbnail>
-        <ion-label>{{ card.name }}</ion-label>
-        <ion-button (click)="addToDeck(card)">Add</ion-button>
-      </ion-item>
-    </ion-list>
-  </div>
-</ion-content>
+  </ion-list>
