--- a/src/app/game/game.page.scss
+++ b/src/app/game/game.page.scss
@@ -155,3 +155,12 @@ ion-card-title {
   }
 }
 
+.background-selection {
+  margin: 20px 0;
+  text-align: center;
+
+  ion-select {
+    width: 200px;
+  }
+}
+
