--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -18,6 +18,7 @@
         <ion-input [(ngModel)]="playerDeck.name" placeholder="Enter deck name"></ion-input>
       </ion-item>
       <p>Deck: {{ playerDeck?.name }}</p>
+      <ion-button color="danger" (click)="deleteDeck('player')">Delete Player Deck</ion-button>
       <ion-list *ngIf="showPlayerDeck">
         <ion-item *ngFor="let card of playerDeck?.cards">
           {{ card.name }}
@@ -42,15 +43,13 @@
   </ion-card>
 
   <!-- Background Selection -->
-  <div class="background-selection">
-    <h3>Select Background</h3>
-    <ion-select [(ngModel)]="selectedBackground" placeholder="Choose a background">
-      <ion-select-option value="Blue Eyes White Dragon.jpg">Blue Eyes White Dragon</ion-select-option>
-      <ion-select-option value="Magicians.jpg">Magicians</ion-select-option>
-      <ion-select-option value="shaddoll.webp">Shaddoll</ion-select-option>
-      <ion-select-option value="Sky Striker.webp">Sky Striker</ion-select-option>
-    </ion-select>
-  </div>
+  <ion-select [(ngModel)]="selectedBackground" (ionChange)="changeBackground(selectedBackground)">
+    <ion-select-option value="Blue Eyes White Dragon.jpg">Blue Eyes White Dragon</ion-select-option>
+    <ion-select-option value="Magicians.jpg">Magicians</ion-select-option>
+    <ion-select-option value="shaddoll.webp">Shaddoll</ion-select-option>
+    <ion-select-option value="Sky Striker.webp">Sky Striker</ion-select-option>
+  </ion-select>
+  
 
   <ion-button expand="full" (click)="savePlayerDeck()">Save Player Deck</ion-button>
   <ion-button expand="full" (click)="simulateDuel()">Simulate Duel</ion-button>
