made summoning animation

--- a/src/app/game-board/game-board.page.html
+++ b/src/app/game-board/game-board.page.html
@@ -6,7 +6,7 @@
   [style.top.px]="clonedCard.top"
   [style.left.px]="clonedCard.left"
   [style.backgroundImage]="'url(' + clonedCard.image + ')'"
-  [style.transform]="transformStyle"
+  [style.transform]="clonedCard.transformStyle"
 ></div>
 
 <div
