--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,7 +16,7 @@
         <ion-button expand="full" type="submit">Login</ion-button>
       </form>
       <ion-button expand="full" fill="clear" routerLink="/register">
-        Don't have an account? Register
+        Register
       </ion-button>
     </ion-card-content>
   </ion-card>
