--- a/src/app/game-board/game-board.page.scss
+++ b/src/app/game-board/game-board.page.scss
@@ -81,8 +81,8 @@
             position: absolute;
             bottom: 0;
             left: 0;
+            right: 0;
             display: none;
-
           }
         }
       }
